# Cargo configuration for SECC

[package]
name = "secc"
version = "0.0.9"
edition = "2018"
authors = ["Robert Simmons Jr. MSc."]
license = "Apache-2.0"
homepage = "https://github.com/rsimmonsjr/secc"
repository = "https://github.com/rsimmonsjr/secc"
documentation = "https://docs.rs/secc"
readme = "README.md"
description = """
Implements a Skip-Enabled Concurrent Channel for Rust
"""

keywords = [
    "Channel", 
	"Concurrent", 
	"MPMC", 
]

categories = [
    "asynchronous",
    "concurrency"
]

exclude = [
    "/.gitignore",
    "/.git",
    "/.github",
    "/.travis.yml",
]

[badges]
travis-ci = {repository = "rsimmonsjr/secc" }
is-it-maintained-issue-resolution = {repository = "rsimmonsjr/secc" }
is-it-maintained-open-issues  = {repository = "rsimmonsjr/secc" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
env_logger = "^0.6.2"

[dependencies]
log ="^0.4.8"
