# Cargo configuration for SECC

[package]
name = "secc"
version = "0.0.10"
edition = "2018"
authors = ["Robert Simmons Jr. MSc."]
license = "Apache-2.0"
homepage = "https://github.com/rsimmonsjr/secc"
repository = "https://github.com/rsimmonsjr/secc"
documentation = "https://docs.rs/secc"
readme = "README.md"
description = """
Implements a Skip-Enabled Concurrent Channel (SECC) for Rust
"""

keywords = [
    "Channel", 
	"Concurrent", 
	"MPMC", 
]

categories = [
    "asynchronous",
    "concurrency"
]

exclude = [
    "/.gitignore",
    "/.git",
    "/.github",
    "/.travis.yml",
]

[badges]
travis-ci = {repository = "rsimmonsjr/secc" }
is-it-maintained-issue-resolution = {repository = "rsimmonsjr/secc" }
is-it-maintained-open-issues  = {repository = "rsimmonsjr/secc" }
maintenance = { status = "actively-developed" }

[dev-dependencies]

[dependencies]
# FIXME Remove when all used features of futures are in Stable.
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }

